Fixed issue where small screens would cut off some of the flashcard control buttons.

--- a/study-app/src/components/Flashcards.css
+++ b/study-app/src/components/Flashcards.css
@@ -3,7 +3,6 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    /*border: dashed 2px green;*/
     padding: 1rem;
     box-sizing: border-box;
     color: var(--primary-text-color);
@@ -47,7 +46,6 @@
     display: flex;
     flex-direction: column;
     background-color: var(--primary-button-background-color);
-    border: solid var(--border-thick) var(--accent);
     overflow: hidden;
 }
 
@@ -96,20 +94,17 @@
 
 .controls {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto auto auto;
     gap: 1rem;
-    /*border: dashed 2px green;*/
     max-width: 500px;
     width: 100%;
-    height: 80px;
+    height: auto;
     justify-content: center;
     margin-top: 1rem;
 }
 
 .controls button {
-    min-width: 80px;
-    max-width: 150px;
     flex: 1 1 auto;
     max-height: 80px;
     border-radius: 15px; 
@@ -182,10 +177,31 @@
     height: 1.5rem;
 }
 
-@media (max-width: 400) {
+@media (max-width: 400px) {
     .controls {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto auto auto;
     }
 
+    .input-div {
+        grid-column: 1 /span 2;
+    }
+
+    .next-button {
+        grid-column: 2;
+    }
+
+    .back-button {
+        grid-column: 1;
+    }
+
+    .lower-reset-button {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .flip-button {
+        grid-column: 2;
+        grid-row: 2;
+    }
 }
